syntax = "proto3";
option java_package = "ru.otus.klepov.homeworks.hw15.domain.newdto.pb";
package ru.otus.klepov.homeworks.hw15.domain.newdto;
import "ChatSessionData.proto";

message SmsData {
  repeated ChatSessionData chat_session = 1;
}